# software_variants_in_c

./: build.sh  readme.md
source/: CMakeLists.txt
source/application/: configuration.h  main.c
